# esp-idf-arduino-bluepad32-reeltwo

./: .gitignore  .gitmodules  platformio.ini  sdkconfig.esp32dev  sdkconfig.esp32dev.old  serial-studio-r2.json
components/Adafruit_Soundboard_library/: Adafruit_Soundboard.cpp  Adafruit_Soundboard.h  CMakeLists.txt
components/ESP32Servo/: CMakeLists.txt
components/ESP32Servo/src/: ESP32Servo.cpp
components/arduino-CAN/src/: ESP32SJA1000.cpp
components/esp8266-oled-ssd1306/: CMakeLists.txt
components/esp8266-oled-ssd1306/src/: OLEDDisplay.h  OLEDDisplayUi.h
main/: CMakeLists.txt  can.cpp  can.h  display.cpp  display.h  motor.cpp  motor.h  neck.cpp  neck.h  pinout.h  servos.cpp  servos.h  sketch.cpp  sound.cpp  sound.h  state.cpp  state.h  touch.cpp  touch.h  utils.cpp  utils.h
